# AAL_3D_convex_hull

./: AAL.cpp  AAL.h  CMakeLists.txt  Naive.cpp  Point.h  PointGeneration.h  README.md  Voxelization.h  convex_hull_set_1.m  convex_hull_set_2.m  main.cpp
Incremental/: Edge.cpp  Edge.h  Incremental.dev  Incremental.layout  Makefile.win  Plane.cpp  Plane.h  Point.cpp  Point.h  PointGeneration.h  Vector.cpp  Vector.h  Voxelization.h  ball_points_incremental.txt  ball_size_incremental.txt  cube_points_incremental.txt  cube_size_incremental.txt  in.txt  main.cpp  out.txt  out2.txt  sphere_points_incremental.txt  sphere_size_incremental.txt
Naive/: Makefile.win  Naive.dev  Naive.layout  Plane.cpp  Plane.h  Point.cpp  Point.h  README  Vector.cpp  Vector.h  Voxelization.h  ball_points_naive.txt  ball_size_naive.txt  cube_points_naive.txt  cube_size_naive.txt  in.txt  main.cpp  out.txt  sphere_points_naive.txt  sphere_size_naive.txt
